fixed If you press enter until cursor is at bottom of editor, it cuts off last line, and the scrolling is misaligned

--- a/renderer/src/containers/App.css
+++ b/renderer/src/containers/App.css
@@ -140,5 +140,5 @@ li.ant-menu-item {
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
